# AtCoder

./: 131_A_Security.cpp  131_B_BiteEating.cpp  131_C_AntiDivision.cpp  132_C_DivideTheProblems.cpp  134_A_Dodecagon.cpp  134_C_ExceptionHandling.cpp  136_A_Transfer.py  139_A_Tenki.py  139_B_PowerSocket.py  140_A_Password.py  140_C_MaximalValue.py  141_A_WeatherPrediction.py  143_A_Curtain.py  143_C_Slimes.py  145_A_Circle.py  145_C_AverageLength.py  148_A_RoundOne.py  148_B_StringWithTheSameLength.py  148_C_Snack.py  149_B_GreedyTakahashi.py  150_B_CountABC.py  150_C_CountOrder.py  151_C_WelcomeToAtcoder.py  153_A_ServalVSMonster.py  154_A_RemainingBalls.py  154_D_DiceInLine.py  155_B_PapersPlease.py  156_B_Digits.py  157_A_DuplexPrinting.py  157_B_Bingo.py  158_B_CountBalls.py  158_C_TaxIncrease.py  159_A_TheNumberOfEvenPairs.py  159_B_StringPalindrome.py  161_A_ABCSwap.py  161_B_PopularVote.py  163_A_CirclePond.py  164_A_SheepAndWolves.py  164_B_Battle.py  166_A_A?C.py  (+87 more)
ABC/: 130_A_Rounding.cpp  130_B_Bounding.cpp  132_A_FiftyFifty.cpp  132_B_OrdinaryNumber.cpp  134_B_GoldenApple.cpp  136_A_Transfer.py  136_B_UnevenNumbers.py  136_C_BuildStairs.py  139_B_PowerSocket.py  139_C_Lower.py  140_A_Password.py  140_B_Buffet.py  140_C_MaximalValue.py  141_A_WeatherPrediction.py  141_B_TapDance.py  141_C_AttackSurvival.py  142_A_OddsOfOddness.py  142_B_RollerCoaster.py  142_C_GoToSchool.py  143_A_Curtain.py  143_B_TAKOYAKIFESTIVAL2019.py  143_C_Slimes.py  144_A_9x9.py  144_B_81.py  144_C_WalkOnMultiplicationTable.py  145_A_Circle.py  145_B_Echo.py  145_C_AverageLength.py  (+183 more)
(+442 files in other folders)
