[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["hy-sksem"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
scipy = "^1.4.1"
scikit-learn = "^0.22.2.post1"
numba = "^0.48.0"
networkx = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
