[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["hy-sksem"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "1.22.0"
scipy = "1.4.1"
scikit-learn = "0.22.2.post1"
numba = "0.48.0"
networkx = "2.4"
atcoder-tools = "^2.12.0"
black = "^22.3.0"
online-judge-tools = "^11.5.1"
invoke = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
