[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["hy-sksem"]

[tool.poetry.dependencies]
python = "3.11.4"
numpy = "1.24.1"
scipy = "1.10.1"
scikit-learn = "1.2.0"
numba = "0.57.0"
networkx = "3.0"
atcoder-tools = "^2.12.0"
black = "^22.3.0"
online-judge-tools = "^11.5.1"
invoke = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
